[package]
authors = ["Stefano Fontana"]
edition = "2021"
name = "lora"
version = "0.1.0"
resolver = "2"

[dependencies]
cortex-m = { version = "0.7.7" }
rtic = { version = "2.1.1", features = ["thumbv6-backend"]}
rtic-monotonics = { version = "2.0.1", features = ["rp2040"]}
rtic-sync = "1.2.0"

embedded-hal = "1"
defmt = "0.3.2"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

usb-device = "0.3.2"
usbd-serial = "0.2.2"
rp2040-hal = { version = "0.10.1", features = ["rt", "rtic-monotonic", "defmt", "critical-section-impl"] }
rp2040-boot2 = "0.3.0"
portable-atomic =  { version = "1.10.0", features = ["critical-section"] }

num_enum = {git = "https://github.com/tetofonta/num_enum", default-features = false}
num_enum_derive = {git = "https://github.com/tetofonta/num_enum", default-features = false, features = ["const"]}
bitfield-struct = { git = "https://github.com/tetofonta/bitfield-struct-rs", features = ["num_enum"]}
endian-num = { version = "0.2.0", features = ["linux-types"] }
log = "0.4.25"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
